--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h1 class="header-banner-title">All Things Tax and Accounting </h1>
         </div>
         <div class="fullscreen-video-wrap">
-            <video src="mixkit-pennies-falling-on-a-reflective-surface-with-a-dark-background-18306.mp4" id="video" autoplay loop muted preload="auto"></video>
+            <video src="mixkit-pennies-falling-on-a-reflective-surface-with-a-dark-background-18306.mp4" id="video" autoplay loop muted playsinline preload="auto"></video>
         </div>
         <!--<img src="img/cherry-grove.jpg" alt="">-->
 </header>
