--- a/about.html
+++ b/about.html
@@ -56,6 +56,14 @@
             <a class="side-nav-a" href="#">Contact</a>
          </div>
     </nav>
+    <div class="intro">
+        <div class="intro-banner">
+          <div class="banner-left">
+            <img src="img/tax-12.png" alt="">
+          </div>
+        
+        </div>
+    </div>
     <article class="article-container">
         <header class="intro">
             <div class="banner-about">
