--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     </li>
                     <li class="dropdown"><a class="navigation-dropdown" href="#">Services</a>
                         <div class="dropdown-content">
-                            <a href="index.html">Federal/State Income Tax Returns</a>
-                            <a href="#">Sales Tax Returns</a>
-                            <a href="#">Payroll Services</a>
-                            <a href="#">Software Training & Assistance</a>
-                            <a href="#">Bookkeeping</a>
+                            <a href="services.html">Federal/State Income Tax Returns</a>
+                            <a href="services.html">Sales Tax Returns</a>
+                            <a href="services.html">Payroll Services</a>
+                            <a href="services.html">Software Training & Assistance</a>
+                            <a href="services.html">Bookkeeping</a>
                         </div>
                     </li>
                     <li><a class="navigation" href="#">Resources</a></li>
@@ -47,11 +47,11 @@
             <a class="side-nav-a" id="side-nav-b" href="about.html">Our Firm</a>
             <a class="side-nav-a" id="side-nav-b" href="about.html">Our Mission</a>
             <a class="side-nav-a" >Services</a>
-            <a class="side-nav-a" id="side-nav-b" href="#">Federal/State Income Tax Returns</a>
-            <a class="side-nav-a" id="side-nav-b" href="#">Sales Tax Returns</a>
-            <a class="side-nav-a" id="side-nav-b" href="#">Payroll Services</a>
-            <a class="side-nav-a" id="side-nav-b" href="#">Software Training & Assistance</a>
-            <a class="side-nav-a" id="side-nav-b" href="#">Bookkeeping</a>
+            <a class="side-nav-a" id="side-nav-b" href="services.html">Federal/State Income Tax Returns</a>
+            <a class="side-nav-a" id="side-nav-b" href="services.html">Sales Tax Returns</a>
+            <a class="side-nav-a" id="side-nav-b" href="services.html">Payroll Services</a>
+            <a class="side-nav-a" id="side-nav-b" href="services.html">Software Training & Assistance</a>
+            <a class="side-nav-a" id="side-nav-b" href="services.html">Bookkeeping</a>
             <a class="side-nav-a" href="#">Resources</a>
             <a class="side-nav-a" href="#">Contact</a>
          </div>
