responsive services page

--- a/about.html
+++ b/about.html
@@ -27,11 +27,11 @@
                     </li>
                     <li class="dropdown"><a class="navigation-dropdown" href="#">Services</a>
                         <div class="dropdown-content">
-                            <a href="#">Federal/State Income Tax Returns</a>
-                            <a href="#">Sales Tax Returns</a>
-                            <a href="#">Payroll Services</a>
-                            <a href="#">Software Training & Assistance</a>
-                            <a href="#">Bookkeeping</a>
+                            <a href="services.html#federal">Federal/State Income Tax Returns</a>
+                            <a href="services.html#sales">Sales Tax Returns</a>
+                            <a href="services.html#payroll">Payroll Services</a>
+                            <a href="services.html#software">Software Training & Assistance</a>
+                            <a href="services.html#book">Bookkeeping</a>
                         </div>
                     </li>
                     <li><a class="navigation" href="#">Resources</a></li>
@@ -43,15 +43,15 @@
          <div id="side-menu" class="side-nav">
             <button class="btn-close">&times</button>
             <a class="side-nav-a" href="index.html">Home</a>
-            <a class="side-nav-a" href="#">About Us</a>
+            <a class="side-nav-a" href="about.html">About Us</a>
             <a class="side-nav-a" id="side-nav-b" href="about.html">Our Firm</a>
             <a class="side-nav-a" id="side-nav-b" href="about.html">Our Mission</a>
             <a class="side-nav-a" >Services</a>
-            <a class="side-nav-a" id="side-nav-b" href="#">Federal/State Income Tax Returns</a>
-            <a class="side-nav-a" id="side-nav-b" href="#">Sales Tax Returns</a>
-            <a class="side-nav-a" id="side-nav-b" href="#">Payroll Services</a>
-            <a class="side-nav-a" id="side-nav-b" href="#">Software Training & Assistance</a>
-            <a class="side-nav-a" id="side-nav-b" href="#">Bookkeeping</a>
+            <a class="side-nav-a" id="side-nav-b" href="services.html#federal">Federal/State Income Tax Returns</a>
+            <a class="side-nav-a" id="side-nav-b" href="services.html#sales">Sales Tax Returns</a>
+            <a class="side-nav-a" id="side-nav-b" href="services.html#payroll">Payroll Services</a>
+            <a class="side-nav-a" id="side-nav-b" href="services.html#software">Software Training & Assistance</a>
+            <a class="side-nav-a" id="side-nav-b" href="services.html#book">Bookkeeping</a>
             <a class="side-nav-a" href="#">Resources</a>
             <a class="side-nav-a" href="#">Contact</a>
          </div>
