--- a/services.html
+++ b/services.html
@@ -48,8 +48,8 @@
             <a class="side-nav-a" id="side-nav-b" href="about.html">Our Mission</a>
             <a class="side-nav-a" >Services</a>
             <a class="side-nav-a" id="side-nav-b" href="#federal">Federal/State Income Tax Returns</a>
-            <a class="side-nav-a" id="side-nav-b" href="#sales">Sales Tax Returns</a>
-            <a class="side-nav-a" id="side-nav-b" href="#payroll">Payroll Services</a>
+            <a class="side-nav-a" id="side-nav-b" href="#federal">Sales Tax Returns</a>
+            <a class="side-nav-a" id="side-nav-b" href="#federal">Payroll Services</a>
             <a class="side-nav-a" id="side-nav-b" href="#book">Software Training & Assistance</a>
             <a class="side-nav-a" id="side-nav-b" href="#book">Bookkeeping</a>
             <a class="side-nav-a" href="#">Resources</a>
