--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <a class="side-nav-a" id="side-nav-b" href="about.html">Our Mission</a>
             <a class="side-nav-a" >Services</a>
             <a class="side-nav-a" id="side-nav-b" href="services.html#federal">Federal/State Income Tax Returns</a>
-            <a class="side-nav-a" id="side-nav-b" href="services.html#sales">Sales Tax Returns</a>
-            <a class="side-nav-a" id="side-nav-b" href="services.html#payroll">Payroll Services</a>
-            <a class="side-nav-a" id="side-nav-b" href="services.html#software">Software Training & Assistance</a>
+            <a class="side-nav-a" id="side-nav-b" href="services.html#federal">Sales Tax Returns</a>
+            <a class="side-nav-a" id="side-nav-b" href="services.html#federal">Payroll Services</a>
+            <a class="side-nav-a" id="side-nav-b" href="services.html#book">Software Training & Assistance</a>
             <a class="side-nav-a" id="side-nav-b" href="services.html#book">Bookkeeping</a>
             <a class="side-nav-a" href="#">Resources</a>
             <a class="side-nav-a" href="#">Contact</a>
