--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@
                             <a href="services.html#book">Bookkeeping</a>
                         </div>
                     </li>
-                    <li><a class="navigation" href="#">Resources</a></li>
-                    <li><a class="navigation" href="#">Contact</a></li>
+                    <li><a class="navigation" href="resources.html">Resources</a></li>
+                    <li><a class="navigation" href="contact.html">Contact</a></li>
                 </ul>
             <span class="nav-icon" ><i class="fas fa-bars"></i>
             </span>
@@ -43,7 +43,7 @@
          <div id="side-menu" class="side-nav">
             <button class="btn-close">&times</button>
             <a class="side-nav-a" href="index.html">Home</a>
-            <a class="side-nav-a" href="about.html">About Us</a>
+            <a class="side-nav-a" href="#">About Us</a>
             <a class="side-nav-a" id="side-nav-b" href="about.html">Our Firm</a>
             <a class="side-nav-a" id="side-nav-b" href="about.html">Our Mission</a>
             <a class="side-nav-a" >Services</a>
@@ -52,8 +52,8 @@
             <a class="side-nav-a" id="side-nav-b" href="services.html#payroll">Payroll Services</a>
             <a class="side-nav-a" id="side-nav-b" href="services.html#software">Software Training & Assistance</a>
             <a class="side-nav-a" id="side-nav-b" href="services.html#book">Bookkeeping</a>
-            <a class="side-nav-a" href="#">Resources</a>
-            <a class="side-nav-a" href="#">Contact</a>
+            <a class="side-nav-a" href="resources.html">Resources</a>
+            <a class="side-nav-a" href="contact.html">Contact</a>
          </div>
     </nav>
     <div class="intro">
