--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                             <a href="services.html#book">Bookkeeping</a>
                         </div>
                     </li>
-                    <li><a class="navigation" href="#">Resources</a></li>
-                    <li><a class="navigation" href="#">Contact</a></li>
+                    <li><a class="navigation" href="resources.html">Resources</a></li>
+                    <li><a class="navigation" href="contact.html">Contact</a></li>
                 </ul>
             <span class="nav-icon" ><i class="fas fa-bars"></i>
             </span>
@@ -52,8 +52,8 @@
             <a class="side-nav-a" id="side-nav-b" href="services.html#federal">Payroll Services</a>
             <a class="side-nav-a" id="side-nav-b" href="services.html#book">Software Training & Assistance</a>
             <a class="side-nav-a" id="side-nav-b" href="services.html#book">Bookkeeping</a>
-            <a class="side-nav-a" href="#">Resources</a>
-            <a class="side-nav-a" href="#">Contact</a>
+            <a class="side-nav-a" href="resources.html">Resources</a>
+            <a class="side-nav-a" href="contact.html">Contact</a>
          </div>
     </nav>
     <header class="hero" id="hero">
